2012-04-18  John M Chambers  <jmc@r-project.org>

	* R/RcppClass.R: New version of setRcppClass, allowing R classes to
	extend C++ classes used via Rcpp modules
	* R/loadModule.R: New function, replaces uses of .onLoad()
	* man/*: Added/updated corresponding documentation

2012-04-07  Romain Francois  <romain@r-enthusiasts.com>

	* inst/include/Rcpp/vector/Vector.h: bug fix. reported on Rcpp-devel
	http://comments.gmane.org/gmane.comp.lang.r.rcpp/3292

2012-03-29  Dirk Eddelbuettel  <edd@debian.org>

	* inst/unitTests/runit.Vector.R: unit test for containsElementNamed

2012-03-29  Romain Francois  <romain@r-enthusiasts.com>

	* inst/include/Rcpp/vector/Vector.h: Vector<> gains the
	containsElementNamed method to test for presence of named element

2012-03-24  Romain Francois  <romain@r-enthusiasts.com>

	* src/cache.cpp: Using a single Rcpp_cache, stored in the Rcpp
	namespace

	* src/Evaluator.cpp: Using tryCatch instead of rcpp_tryCatch, no more
	using .Internal; but still define rcpp_TryCatch for backwards compat.

2012-03-23  Dirk Eddelbuettel  <edd@debian.org>

	* inst/doc/Rcpp-FAQ/Rcpp-FAQ.Rnw: Added short subsection on how to
	test a package from the command-line, expanding a patch by Glenn
	Lawyer in response to an initial rcpp-devel post by Dirk

2012-02-16  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION: Release 0.9.10
        * inst/NEWS: Release 0.9.10
        * inst/include/Rcpp/config.h: Release 0.9.10
        * debian/*: Similarly updated for new release to Debian

2012-02-16  Douglas Bates  <bates@stat.wisc.edu>

	* src/Evaluator.cpp: PROTECT the expr argument to Evaluator::Run.
	Reorganize code.

2011-12-15  Douglas Bates  <bates@stat.wisc.edu>

        * src/Evaluator.cpp: Avoid Rf_install inside an R API call

2012-02-12  Dirk Eddelbuettel  <edd@debian.org>

	* R/excections.R: Revert to previous use with .Internal
        * R/tools.R: Add branch for R 2.15.0 which can use
	assingInMyNamespace; else still use unlockBinding
